--- a/deployment.azure.yml
+++ b/deployment.azure.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: services-menu
+      app: services-wiremock
   replicas: 1
   template:
     metadata:
@@ -33,7 +33,7 @@ apiVersion: v1
 metadata:
   name: ngrp-wiremock-server-service
   annotations:
-    service.beta.kubernetes.io/azure-load-balancer-internal: "#{INTERNAL-LOAD-BALANCER}#"
+    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
 spec:
   selector:
     app: services-wiremock
@@ -41,4 +41,4 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
-  type: #{EXT-ACCESS-SERVICE-TYPE}#
+  type: LoadBalancer
