--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,17 @@
 plugins {
     id 'java'
-    id("io.freefair.lombok") version "8.0.1"
+    id("io.freefair.lombok") version "8.4"
 }
-sourceCompatibility = 1.11
-targetCompatibility = 1.11
+
+sourceCompatibility = 1.17
+targetCompatibility = 1.17
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'com.github.tomakehurst:wiremock:3.0.0-beta-8'
+    implementation 'org.wiremock:wiremock:3.2.0'
     implementation 'ch.qos.logback:logback-classic:1.4.7'
 }
 
