added member reward search APIs

--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,11 @@ plugins {
     id("io.freefair.lombok") version "8.4"
 }
 
-sourceCompatibility = 1.17
-targetCompatibility = 1.17
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 repositories {
     mavenCentral()
